@@ -1,26 +1,28 @@
 ---
-name: Config-Model-Backend-Augeas
-version: 0.107
+abstract: 'Read and write configuration data through Augeas'
 author:
-  - Dominique Dumont (ddumont at cpan dot org)
-abstract: Read and write configuration data through Augeas
-license: lgpl
-resources:
-  license: http://opensource.org/licenses/lgpl-license.php
-requires:
-  Config::Augeas: 0.303
-  Config::Model: 0.636
-  Exception::Class: 0
-  Log::Log4perl: 1.11
+  - 'Dominique Dumont (ddumont at cpan dot org)'
 build_requires:
   Test::Exception: 0
   Test::More: 0
   Test::Warn: 0.11
-provides:
-  Config::Model::Backend::Augeas:
-    file: lib/Config/Model/Backend/Augeas.pm
-    version: 0.107
-generated_by: Module::Build version 0.33
+configure_requires:
+  Module::Build: 0.36
+generated_by: 'Module::Build version 0.3607'
+license: lgpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
+name: Config-Model-Backend-Augeas
+provides:
+  Config::Model::Backend::Augeas:
+    file: lib/Config/Model/Backend/Augeas.pm
+    version: 0.108
+requires:
+  Config::Augeas: 0.303
+  Config::Model: 1.207
+  Exception::Class: 0
+  Log::Log4perl: 1.11
+resources:
+  license: http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt
+version: 0.108
